--- a/slides/clase2.ipynb
+++ b/slides/clase2.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c95ed32d",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "[6 Alternatives x 3 Criteria]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "973db9c6",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "[6 Alternatives x 3 Criteria]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "20872f50",
    "metadata": {
     "slideshow": {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "ec44dcaf",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "EqualWeighter(base_value=1.0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "5314dd38",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "[6 Alternatives x 3 Criteria]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,8 +514,8 @@
    "source": [
     "## `skcriteria.preprocessing.weighters.StdWeighter`\n",
     "\n",
-    "- El criterio mas disperso es el más importante.\n",
-    "- Utiliza el desvio estandar por criterio como valor del peso.\n",
+    "- Utiliza el desvio estandar por criterio normalizado.\n",
+    "- Se altera en caso de invertir los criteriios ($1/Ci$) o en normalizaciones.\n",
     "\n",
     "$$w_j = \\frac{s_j}{\\sum{s}}$$\n",
     "\n",
@@ -526,79 +526,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "2f6d1582",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Critic(correlation=<function pearson_correlation at 0x7fc86c352ef0>, scale=True)"
+       "StdWeighter()"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from skcriteria.preprocessing import invert_objectives\n",
-    "wght = weighters.Critic()\n",
+    "wght = weighters.StdWeighter()\n",
     "wght"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "dafc15d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weighters.critic_weights??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "f454f231",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/juanbc/proyectos/skcriteria/src/skcriteria/preprocessing/weighters.py:396: UserWarning: Although CRITIC can operate with minimization objectives, this is not recommended. Consider reversing the weights for these cases.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div class='decisionmatrix'>\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ROE[▲ 0.271124]</th>\n",
+       "      <th>CAP[▲ 0.214342]</th>\n",
+       "      <th>RI[▼ 0.514533]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PE</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JN</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AA</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FX</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MM</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GN</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div><em class='decisionmatrix-dim'>6 Alternatives x 3 Criteria</em>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(    ROE[▲ 0.337001]  CAP[▲ 0.352684]  RI[▼ 0.310315]\n",
-       " PE                7                5              35\n",
-       " JN                5                4              26\n",
-       " AA                5                6              28\n",
-       " FX                3                4              36\n",
-       " MM                1                7              30\n",
-       " GN                5                8              30\n",
-       " [6 Alternatives x 3 Criteria],\n",
-       "     ROE[▲ 0.327652]  CAP[▲ 0.362739]  RI[▲ 0.309610]\n",
-       " PE                7                5        0.028571\n",
-       " JN                5                4        0.038462\n",
-       " AA                5                6        0.035714\n",
-       " FX                3                4        0.027778\n",
-       " MM                1                7        0.033333\n",
-       " GN                5                8        0.033333\n",
-       " [6 Alternatives x 3 Criteria])"
+       "    ROE[▲ 0.271124]  CAP[▲ 0.214342]  RI[▼ 0.514533]\n",
+       "PE                7                5              35\n",
+       "JN                5                4              26\n",
+       "AA                5                6              28\n",
+       "FX                3                4              36\n",
+       "MM                1                7              30\n",
+       "GN                5                8              30\n",
+       "[6 Alternatives x 3 Criteria]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wght.transform(dm), wght.transform(invert_objectives.CriMinimize().transform(dm))"
+    "wght.transform(dm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3091faf",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## `skcriteria.preprocessing.weighters.EntropyWeighter`\n",
+    "\n",
+    "- En este caso el criterio con mas \"sorpresas\" es el mas importante.\n",
+    "- Bastante robusto frente a ruidos y normalizaciones.\n",
+    "\n",
+    "$$\n",
+    "    w_j = \\frac{H_j}{\\sum{H}}\n",
+    "$$\n",
+    "\n",
+    "Donde:\n",
+    "- $H_j$ entropía del criterio $j$.\n",
+    "- $\\sum{H}$ la suma de las entropías de todos los criterios."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4b548f17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EntropyWeighter()"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wght = weighters.EntropyWeighter()\n",
+    "wght"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "47eed8d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class='decisionmatrix'>\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ROE[▲ 0.321546]</th>\n",
+       "      <th>CAP[▲ 0.336576]</th>\n",
+       "      <th>RI[▼ 0.341877]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PE</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JN</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AA</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FX</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MM</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GN</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div><em class='decisionmatrix-dim'>6 Alternatives x 3 Criteria</em>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ROE[▲ 0.321546]  CAP[▲ 0.336576]  RI[▼ 0.341877]\n",
+       "PE                7                5              35\n",
+       "JN                5                4              26\n",
+       "AA                5                6              28\n",
+       "FX                3                4              36\n",
+       "MM                1                7              30\n",
+       "GN                5                8              30\n",
+       "[6 Alternatives x 3 Criteria]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wght.transform(dm)"
    ]
   },
   {
@@ -644,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "9e042840",
    "metadata": {
     "slideshow": {
@@ -660,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "d718c06f",
    "metadata": {
     "slideshow": {
@@ -675,7 +855,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m pipe \u001b[38;5;241m=\u001b[39m mkpipe(\n\u001b[0;32m----> 2\u001b[0m     MinimizeToMaximize(), \n\u001b[1;32m      3\u001b[0m     SumScaler(target\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweights\u001b[39m\u001b[38;5;124m\"\u001b[39m), \n\u001b[1;32m      4\u001b[0m     VectorScaler(target\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatrix\u001b[39m\u001b[38;5;124m\"\u001b[39m), \n\u001b[1;32m      5\u001b[0m     TOPSIS()\n\u001b[1;32m      6\u001b[0m )\n\u001b[1;32m      7\u001b[0m pipe\n",
+      "Cell \u001b[0;32mIn [10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m pipe \u001b[38;5;241m=\u001b[39m mkpipe(\n\u001b[0;32m----> 2\u001b[0m     MinimizeToMaximize(), \n\u001b[1;32m      3\u001b[0m     SumScaler(target\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweights\u001b[39m\u001b[38;5;124m\"\u001b[39m), \n\u001b[1;32m      4\u001b[0m     VectorScaler(target\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatrix\u001b[39m\u001b[38;5;124m\"\u001b[39m), \n\u001b[1;32m      5\u001b[0m     TOPSIS()\n\u001b[1;32m      6\u001b[0m )\n\u001b[1;32m      7\u001b[0m pipe\n",
       "\u001b[0;31mNameError\u001b[0m: name 'MinimizeToMaximize' is not defined"
      ]
     }
