--- a/slides/clase0.ipynb
+++ b/slides/clase0.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "60df4df1",
+   "id": "08735f52",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -11,168 +11,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ":root {\n",
-       "    --primary: #7b8e2d;\n",
-       "    /* Used for subtitles, captions and code */\n",
-       "    --secondary: #5e705f;\n",
-       "    /* Links  */\n",
-       "    --links: #7b8e2d;\n",
-       "    /* Background color of jupyter input cell */\n",
-       "    --jupyter-in-cell-bg: #e3ffd28c;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".rise-enabled .reveal section img {\n",
-       "  display: block;\n",
-       "  margin-left: auto;\n",
-       "  margin-right: auto;\n",
-       "  min-width: 50%;\n",
-       "}\n",
-       "\n",
-       ".rise-enabled .text_cell_render.rendered_html p,\n",
-       ".rise-enabled .text_cell_render.rendered_html li{\n",
-       "    font-size: 30px\n",
-       "}\n",
-       "\n",
-       ".rise-enabled .text_cell_render.rendered_html h2{\n",
-       "    font-size: 54px\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".cell .maintitle, .cell .maintitle * {\n",
-       "    margin-left: auto;\n",
-       "    margin-right: auto;\n",
-       "    text-align: center;\n",
-       "    color: var(--primary) !important\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".cell h1, .cell h3, .cell em, .cell strong, .cell li::marker, \n",
-       ".cell span.MathJax, .cell code {\n",
-       "    color: var(--primary) !important\n",
-       "}\n",
-       "\n",
-       ".cell .decisionmatrix-dim {\n",
-       "    color: black !important;\n",
-       "}\n",
-       "        \n",
-       ".cell h2, .cell h4 {\n",
-       "    color: var(--secondary) !important\n",
-       "}\n",
-       "\n",
-       ".cell a {\n",
-       "    color: var(--links) !important;\n",
-       "    text-decoration: none !important; \n",
-       "}\n",
-       "                \n",
-       "\n",
-       ".cell a::after {\n",
-       "    content: \"⬏\"; \n",
-       "    color: var(--primary) !important\n",
-       "}\n",
-       "    \n",
-       ".cell table.clean, .cell table.clean tr, .cell table.clean td {\n",
-       "    background-color: white;\n",
-       "    border: none;\n",
-       "}\n",
-       "        \n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conf done!\n"
+     ]
     }
    ],
    "source": [
-    "%%html\n",
-    "<style>\n",
-    ":root {\n",
-    "    --primary: #7b8e2d;\n",
-    "    /* Used for subtitles, captions and code */\n",
-    "    --secondary: #5e705f;\n",
-    "    /* Links  */\n",
-    "    --links: #7b8e2d;\n",
-    "    /* Background color of jupyter input cell */\n",
-    "    --jupyter-in-cell-bg: #e3ffd28c;\n",
-    "}\n",
-    "\n",
-    "\n",
-    ".rise-enabled .reveal section img {\n",
-    "  display: block;\n",
-    "  margin-left: auto;\n",
-    "  margin-right: auto;\n",
-    "  min-width: 50%;\n",
-    "}\n",
-    "\n",
-    ".rise-enabled .text_cell_render.rendered_html p,\n",
-    ".rise-enabled .text_cell_render.rendered_html li{\n",
-    "    font-size: 30px\n",
-    "}\n",
-    "\n",
-    ".rise-enabled .text_cell_render.rendered_html h2{\n",
-    "    font-size: 54px\n",
-    "}\n",
-    "\n",
-    "\n",
-    ".cell .maintitle, .cell .maintitle * {\n",
-    "    margin-left: auto;\n",
-    "    margin-right: auto;\n",
-    "    text-align: center;\n",
-    "    color: var(--primary) !important\n",
-    "}\n",
-    "\n",
-    "\n",
-    ".cell h1, .cell h3, .cell em, .cell strong, .cell li::marker, \n",
-    ".cell span.MathJax, .cell code {\n",
-    "    color: var(--primary) !important\n",
-    "}\n",
-    "\n",
-    ".cell .decisionmatrix-dim {\n",
-    "    color: black !important;\n",
-    "}\n",
-    "        \n",
-    ".cell h2, .cell h4 {\n",
-    "    color: var(--secondary) !important\n",
-    "}\n",
-    "\n",
-    ".cell a {\n",
-    "    color: var(--links) !important;\n",
-    "    text-decoration: none !important; \n",
-    "}\n",
-    "                \n",
-    "\n",
-    ".cell a::after {\n",
-    "    content: \"⬏\"; \n",
-    "    color: var(--primary) !important\n",
-    "}\n",
-    "    \n",
-    ".cell table.clean, .cell table.clean tr, .cell table.clean td {\n",
-    "    background-color: white;\n",
-    "    border: none;\n",
-    "}\n",
-    "        \n",
-    "</style>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "08735f52",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "warnings.simplefilter(\"ignore\", FutureWarning)"
+    "import conf"
    ]
   },
   {
@@ -5474,24 +5321,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "464ce55f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "{10: 1.0000000000000006e-10, 100: 1.000000000000006e-100, 500: 0.0}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "np.full(1000, .1).prod()"
+    "{size: np.full(size, .1).prod() for size in [10, 100, 500]}"
    ]
   },
   {
