--- a/slides/clase1.ipynb
+++ b/slides/clase1.ipynb
@@ -219,9 +219,9 @@
     "            <thead>\n",
     "              <tr>\n",
     "                <th></th>\n",
-    "                <th>$y_1$</th>\n",
-    "                <th>$y_2$</th>\n",
-    "                <th>$y_3$</th>\n",
+    "                <th>$$y_1$$</th>\n",
+    "                <th>$$y_2$$</th>\n",
+    "                <th>$$y_3$$</th>\n",
     "              </tr>\n",
     "            </thead>\n",
     "            <tbody>\n",
@@ -248,7 +248,7 @@
     "            <thead>\n",
     "              <tr>\n",
     "                <th></th>\n",
-    "                <th>$y_1$</th>\n",
+    "                <th>$$y_1$$</th>\n",
     "              </tr>\n",
     "            </thead>\n",
     "            <tbody>\n",
@@ -308,7 +308,12 @@
    "source": [
     "## Propiedad 3: Dominancia\n",
     "\n",
-    "Se da cuando una opción es mejor que otra en un estado de la naturaleza y al menos tan buena en todos los demás estados.\n"
+    "Se da cuando una opción es mejor que otra en un estado de la naturaleza y al menos tan buena en todos los demás estados.\n",
+    "\n",
+    "|       | $$y_1$$ | $$y_2$$ | $$y_3$$ |   |       | $$y_1$$ | $$y_2$$ | $$y_3$$ |\n",
+    "|:-----:|:-----:|:-----:|:-----:|   |:-----:|:-----:|:-----:|:-----:|\n",
+    "| $x_1$ |   5   |   8   |   7   |   | $x_1$ |   6   |   2   |   3   |\n",
+    "| $x_2$ |   3   |   2   |   1   |   | $x_2$ |   5   |   2   |   3   |\n"
    ]
   },
   {
@@ -320,7 +325,15 @@
     }
    },
    "source": [
-    "## Propiedad 4: Invarianza "
+    "## Propiedad 4: Invarianza \n",
+    "\n",
+    "Las diferentes representaciones  (marco) del mismo problema de elección deben producir la misma preferencia. Es decir, la preferencia entre las opciones debe ser independiente de su descripción. \n",
+    "\n",
+    "|          | $y_1$ | $y_2$ | $$d(x) = E_y C(x,y)$$ |   |          | $y_1$ | $y_2$ | $$d(x) = E_y C(x,y)$$ |\n",
+    "|:--------:|:-----:|:-----:|:-------------------:|---|:--------:|:-----:|:-----:|:-------------------:|\n",
+    "|   $x_1$  |   5   |   8   |         6,8         |   |   $x_1$  |   8   |   5   |         6,8         |\n",
+    "|   $x_2$  |   6   |   2   |         3,6         |   |   $x_2$  |   2   |   6   |         3,6         |\n",
+    "| $P(y_i)$ | 0,40  | 0,60  |                     |   | $P(y_i)$ | 0,60  | 0,40  |                     |"
    ]
   },
   {
@@ -334,64 +347,96 @@
    "source": [
     "## Problema del Modelo Normativo \n",
     "\n",
-    "Las **desviaciones** del comportamiento real del modelo normativo son **demasiado amplias** como para ser ignoradas, **demasiado sistemáticas** para ser descartadas como error aleatorio, y **demasiado fundamentales** para ser acomodadas relajando el sistema normativo."
+    "Las **desviaciones** del comportamiento real del modelo normativo son **demasiado amplias** como para ser ignoradas, **demasiado sistemáticas** para ser descartadas como error aleatorio, y **demasiado fundamentales** para ser acomodadas relajando el sistema normativo.\n",
+    "\n",
+    "Distintos teóricos respondieron a las violaciones observadas de cancelación y transitividad al debilitar la teoría normativa a fin de mantener su estatus como modelo descriptivo. \n",
+    "\n",
+    "`Una teoría de la decisión racional no puede proporcionar una descripción adecuada del comportamiento de elección.`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a221ca49",
+   "id": "32bcdbeb",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## `skcriteria.preprocessing.weighters.EqualWeighter`\n",
+    "## Fallas a la Invarianza. Problema  1 \n",
     "\n",
-    "- Es el aproach naive, de asignar el mismo peso a todos los criterios.\n",
-    "- Simplemente acepta un valor `base_value` y lo divide por la cantidad de criterios.\n",
-    "- Obviamente: `base_value=1` (valor por defecto) es lo mismo que poner cualquier valor y normalizarlo por la suma."
+    "**Problema 1 (Marco de supervivencia)**\n",
+    "- Cirugía: De 100 personas que se someten a cirugía 90 viven durante el período postoperatorio, 68 están vivos al final del primer año y 34 están vivos al cabo de cinco años.\n",
+    "- Radioterapia: De 100 personas que reciben radioterapia, todas viven a través del tratamiento, 77 están vivas al final de un año y 22 están vivas al cabo de cinco años.\n",
+    "\n",
+    "\n",
+    "**Problema 1 (Cuadro de mortalidad)**\n",
+    "- Cirugía: De 100 personas que se operan 10 mueren durante la cirugía o el período postoperatorio, 32 mueren al final del primer año y 66 mueren al cabo de cinco años.\n",
+    "- Radioterapia: de 100 personas que reciben radioterapia, ninguna muere durante el tratamiento, 23 mueren al final de un año y 78 mueren al cabo de cinco años"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4d2ae3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ec44dcaf",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'weighters' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m wght \u001b[38;5;241m=\u001b[39m \u001b[43mweighters\u001b[49m\u001b[38;5;241m.\u001b[39mEqualWeighter()\n\u001b[1;32m      2\u001b[0m wght\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'weighters' is not defined"
-     ]
+   "cell_type": "markdown",
+   "id": "0ee8f8a0",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
-   ],
+   },
    "source": [
-    "wght = weighters.EqualWeighter()\n",
-    "wght"
+    "## Fallas a la Invarianza. Problema  1 \n",
+    "\n",
+    "\n",
+    "| Sobrevivientes n=247 | Operación  (100 personas) | Al  final del  año 1 | Al final del  año 5 |\n",
+    "|:--------------------:|:-------------------------:|:--------------------:|:-------------------:|\n",
+    "|        Cirugía       |             90            |          68          |          34         |\n",
+    "|     Radioterapia     |            100            |          77          |          22         |\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5314dd38",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "bd188108",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "wght.transform(dm)"
+    "\n",
+    "- Eligieron la Cirugía 82% de los encuestados\n",
+    "- Eligieron  la radioterapia 18 % de los encuestados "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "650d3cc7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Fallas a la Invarianza. Problema  1 \n",
+    "\n",
+    "\n",
+    "| Mortalidad  n= 336 | Operación  (100 personas) | Al  final del  año 1 | Al final del  año 5 |\n",
+    "|:------------------:|:-------------------------:|:--------------------:|:-------------------:|\n",
+    "|       Cirugía      |             10            |          32          |          66         |\n",
+    "|    Radioterapia    |             0             |          23          |          78         |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ae95d48",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "\n",
+    "- Eligieron la Cirugía 56% de los encuestados\n",
+    "- Eligieron  la radioterapia 44 % de los encuestados "
    ]
   },
   {
