--- a/slides/clase0.ipynb
+++ b/slides/clase0.ipynb
@@ -86,9 +86,9 @@
     "Analicemos un poco:\n",
     "\n",
     "- *Velocidad del vehículo:* Se mide en $Km/h$, y mientras *mas alta* mejor.\n",
-    "- *Autonomía:* Supongamos que en tanque lleno, y mientras mas $Km$ realiza el vehículo mejor.\n",
+    "- *Autonomía:* Supongamos que con tanque lleno, mientras mas $Km$ realiza el vehículo mejor.\n",
     "- *Confort:* Lo sacamos de alguna revista y le ponemos algún puntaje del 1-10, donde 1 es lo peor, y 10 es lo mejor.\n",
-    "- *Seguridad:* Sacamos el indice de estrellas de [Latin NCAP](https://www.latinncap.com). 5 estrellas lo tienen los autos mas seguros.\n",
+    "- *Seguridad:* Sacamos el índice de estrellas de [Latin NCAP](https://www.latinncap.com). 5 estrellas lo tienen los autos mas seguros.\n",
     "- *Precio:* Sacamos el precio del [Registo Automotor](https://www.registroautomotor.info), y obviamente mientras mas barato, mejor."
    ]
   },
@@ -127,12 +127,12 @@
     "\n",
     "Que preguntas razonables podemos hacer a este set de datos?\n",
     "\n",
-    "1. Cual es el mejor auto?\n",
-    "2. Hay algunos autos mejores que los demas?\n",
-    "3. Hay algun orden desde el mejor al peor?\n",
+    "1. Cuál es el mejor auto?\n",
+    "2. Hay algunos autos mejores que los demás?\n",
+    "3. Hay algún orden desde el mejor al peor?\n",
     "4. Hay alguna alternativa claramente mejor?\n",
-    "5. Hay algun criterio mas importante que los demas?\n",
-    "6. Si asumimos error, que tan estble son las soluciones de las preguntas *1*, *2* y *3*?"
+    "5. Hay algún criterio mas importante que los demás?\n",
+    "6. Si asumimos error, que tan estable son las soluciones de las preguntas *1*, *2* y *3*?"
    ]
   },
   {
@@ -148,7 +148,7 @@
     "\n",
     "- No ~me considero~ soy un experto en el tema.\n",
     "- Es un tema que me resulta super interesante pero esta bastante sub-utilizado en la ciencia de datos.\n",
-    "- El curso esta orientado a poner sobre la mesa una familia de tecnicas de análisis de datos.\n",
+    "- El curso esta orientado a poner sobre la mesa una familia de técnicas de análisis de datos.\n",
     "- Estas disciplinas estan metidas dentro de la Investigación de operaciones.\n",
     "\n",
     "> *Hint*\n",
@@ -234,12 +234,12 @@
    "source": [
     "## Scikit-Criteria\n",
     "\n",
-    "- **Scikit-Criteria** es una colección de metodos y herramentas para análisis de decisiones con criterios múltiples.\n",
+    "- **Scikit-Criteria** es una colección de metodos y herramientas para análisis de decisiones con criterios múltiples.\n",
     "- Está integrado en al stack científico de Python. \n",
     "- Es de código abierto y comercialmente utilizable.\n",
     "- Esta \"inspirado\" en la forma de trabajo de Scikit-learn (robar es malo).\n",
     "- Tiene un diseño pensando en exponer la semántica del MCDM.\n",
-    "- Todos sos objtos son *inmutables*.\n",
+    "- Todos los objtos son *inmutables*.\n",
     "- Todo devuelve una copia.\n",
     "\n",
     "http://scikit-criteria.org/\n",
@@ -308,7 +308,7 @@
    "source": [
     "## Problema\n",
     "\n",
-    "A fin de decidir comprar una serie de bonos, una empresa estudió 5 inversiones candidatas: PE, JN, AA, FX, MM y GN. El departamento de finanzas decide considerar los siguientes criterios para la selección:\n",
+    "A fin de decidir comprar una serie de acciones, una empresa estudió 5 inversiones candidatas: PE, JN, AA, FX, MM y GN. El departamento de finanzas decide considerar los siguientes criterios para la selección:\n",
     "\n",
     "- Criterio 1 **ROE**: Rendimiento % por cada peso invertido. Sentido de optimidad, Maximizar \n",
     "- Criterio 2 **CAP**: Años de capitalización en el mercado. Sentido de optimidad, Maximizar  \n",
@@ -780,7 +780,7 @@
    "source": [
     "## Etapa 4: `skcriteria.DecisionMatrix` (cont.)\n",
     "\n",
-    "`DecisionMatrix` tambien soporta operaciones de slice y dice como los `DataFrames` con los accessors `loc`, `iloc` (alternatives/filas) y `[]` (criterios/columnas)"
+    "`DecisionMatrix` también soporta operaciones de slice y dice como los `DataFrames` con los accessors `loc`, `iloc` (alternatives/filas) y `[]` (criterios/columnas)"
    ]
   },
   {
@@ -1263,7 +1263,7 @@
    "source": [
     "## Etapa 4: `skcriteria.DecisionMatrix` (cont.)\n",
     "\n",
-    "Posee una amplia variedad de plots, tanto como para pesos como para la matriz de alternativas"
+    "Posee una amplia variedad de plots, tanto para pesos como para la matriz de alternativas"
    ]
   },
   {
@@ -1448,7 +1448,7 @@
    "source": [
     "## Etapa 4: `skcriteria.DecisionMatrix` (cont.)\n",
     "\n",
-    "Por ultimo (por ahora) se puede convertir las `DecisionMatrix` en un `DataFrame` resumen, util para compartir datos con usuarios no-Python."
+    "Por último, (por ahora) se puede convertir las `DecisionMatrix` en un `DataFrame` resumen, útil para compartir datos con usuarios no-Python."
    ]
   },
   {
@@ -1597,9 +1597,9 @@
    "source": [
     "## Etapa 5: `DecisionMatrix.dominance`\n",
     "\n",
-    "Todas las herramientas de analisis de dominancia estan dentro del atributo `dominance` de *DecisionMatrix*\n",
+    "Todas las herramientas de análisis de dominancia están dentro del atributo `dominance` de *DecisionMatrix*\n",
     "\n",
-    "Por ejemplo se puede evaluar que $A_i \\succeq A_j$"
+    "Por ejemplo, se puede evaluar que $A_i \\succeq A_j$"
    ]
   },
   {
@@ -1867,7 +1867,7 @@
    "source": [
     "## Etapa 5: `DecisionMatrix.dominance`\n",
     "\n",
-    "Tambien podemos ver en cuantos criterios domina una alternativa a la otra con el método `bt()` (better-than) y en cuantos empatan con `eq` (equals)"
+    "También podemos ver en cuantos criterios domina una alternativa a la otra con el método `bt()` (better-than) y en cuantos empatan con `eq` (equals)"
    ]
   },
   {
@@ -2127,7 +2127,7 @@
    "source": [
     "## Etapa 5: `DecisionMatrix.dominance`\n",
     "\n",
-    "Puede resumirse las tablas de dominancia en una unica `Series` que identifica si una alternativa es o no dominada"
+    "Puede resumirse las tablas de dominancia en una única `Series` que identifica si una alternativa es o no dominada"
    ]
   },
   {
@@ -2197,7 +2197,7 @@
    "source": [
     "## Etapa 5: `DecisionMatrix.dominance`\n",
     "\n",
-    "Tambien se puede estudiar la dominancia por alternativa"
+    "También se puede estudiar la dominancia por alternativa"
    ]
   },
   {
@@ -2458,7 +2458,7 @@
    "source": [
     "## Etapa 5: `DecisionMatrix.plot.dominance`\n",
     "\n",
-    "Visualmente se puede explorar la domunancia de dos formas:\n",
+    "Visualmente se puede explorar la dominancia de dos formas:\n",
     "\n",
     "1. Graficar la matriz de dominancia con sus valores de referencia"
    ]
@@ -2547,7 +2547,7 @@
     "\n",
     "En primer lugar podemos quedarnos con los $ROE \\ge 2$.\n",
     "\n",
-    "La clase `filters.Filter` recibe como parametros un *dict* en cual cada llave es el nombre de un criterio, y cada valor es una funcion arbitraria que recibe la columna criterio como parametro y retorna un arreglo de con la misma cantidad de elementos que el array, y solo conserva las alternativas donde todos los criterios son `True`"
+    "La clase `filters.Filter` recibe como parámetros un *dict* en cual cada llave es el nombre de un criterio, y cada valor es una función arbitraria que recibe la columna criterio como parámetro y retorna un arreglo con la misma cantidad de elementos que el array, y sólo conserva las alternativas donde todos los criterios son `True`"
    ]
   },
   {
@@ -2785,7 +2785,7 @@
    "source": [
     "## Etapa 5: `skcriteria.preprocessing.filters`\n",
     "\n",
-    "Tambien hay filtro que elmina las alternativas dominadas o estrictiamente dominadas"
+    "También hay filtro que elmina las alternativas dominadas o estrictiamente dominadas"
    ]
   },
   {
@@ -3553,7 +3553,7 @@
    "id": "6184c2ce",
    "metadata": {},
    "source": [
-    "Y tambien se ofrece una de coleccion de plots para visualizar los pesos dentro de `DecisionMatrix.plot` \n",
+    "Y también se ofrece una de colección de plots para visualizar los pesos dentro de `DecisionMatrix.plot` \n",
     "\n",
     "> *HINT:* todos los plots de pesos empiezan con **`w`** (`whist`, `wkde`, `wbar`, `wbarh`, `wogive`...)"
    ]
@@ -3912,7 +3912,7 @@
     "## Etapa 8: `skcriteria.preprocessing.scalers`\n",
     "\n",
     "\n",
-    "La fracción del maximo o `MaxAbsScaler` se define como\n",
+    "La fracción del maximo o `MaxAbsScaler` se define como:\n",
     "\n",
     "$$\n",
     "    r_{ij} = \\frac{a_{ij}}{\\max{a_i}}\n",
@@ -4034,7 +4034,7 @@
    "source": [
     "## Etapa 8: `skcriteria.preprocessing.scalers`\n",
     "\n",
-    "Modulo del vector o `VectorScaler` esta definido como\n",
+    "Módulo del vector o `VectorScaler` esta definido como:\n",
     "\n",
     "$$\n",
     "r_{ij} = \\frac{a_{ij}}{\\sqrt{\\sum_{i=1}^{m}a_{ij}^2}}\n",
@@ -4849,7 +4849,7 @@
     "\n",
     "Algunos métodos de agregación pueden devolver rankings empatados. \n",
     "\n",
-    "Para ver si algún ranking esta asignado a más de una alternativa"
+    "Para ver si algún ranking está asignado a más de una alternativa"
    ]
   },
   {
@@ -4878,7 +4878,7 @@
    "id": "e3b5a8d2",
    "metadata": {},
    "source": [
-    "Tambien se puede desempatar los rankings corriendo los valores a inmediato posterior, dado el orden definido por sus alternativas. \n",
+    "También se puede desempatar los rankings corriendo los valores a inmediato posterior, dado el orden definido por sus alternativas. \n",
     "\n",
     "Algo así: `[3, 1, 1, 1 , 2]` -> `[5, 1, 2, 3, 4]`"
    ]
@@ -4909,7 +4909,7 @@
    "id": "c0a6d6da",
    "metadata": {},
    "source": [
-    "Si se quiere ver cuantas alternativas se asignaron a cada ranking"
+    "Si se quiere ver cuántas alternativas se asignaron a cada ranking"
    ]
   },
   {
@@ -4944,7 +4944,7 @@
    "source": [
     "## Etapa 9: Resultados - `extra_`\n",
     "\n",
-    "Los calculos intermedios de los metodos se almacenan en un atributo llamado `extra_`."
+    "Los cálculos intermedios de los métodos se almacenan en un atributo llamado `extra_`."
    ]
   },
   {
@@ -5754,11 +5754,11 @@
    "source": [
     "## Cerrando\n",
     "\n",
-    "- Los metodos MCDA son muy transparentes.\n",
+    "- Los métodos MCDA son muy transparentes.\n",
     "- Sistematizan una serie de problemas de manera muy sencilla.\n",
-    "- El area puede interactuar muy bien con toda la bateria de \"cosas\" de ciencias de datos.\n",
-    "- Da un marco de analisis al proceso de toma de decisiones por parte de algun experto.\n",
-    "- Scikit-Criteria no solo es unaherramienta para hacer MCDM, sino que implementa técnicas y funcionalidades para realizar un análisis completo de la toma decisiones."
+    "- El área puede interactuar muy bien con toda la bateria de \"cosas\" de ciencias de datos.\n",
+    "- Da un marco de análisis al proceso de toma de decisiones por parte de algun experto.\n",
+    "- Scikit-Criteria no sólo es una herramienta para hacer MCDM, sino que implementa técnicas y funcionalidades para realizar un análisis completo de la toma decisiones."
    ]
   },
   {
@@ -5819,7 +5819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
